EKS-resources/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1  # Number of desired replicas
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx 
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/nginx_status"
        prometheus.io/port: "443"
      
    spec:
      containers:
      - name: nginx
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/nginx-bop:latest  # Your ECR image
        ports:
        - containerPort: 80   # Port for HTTP
        - containerPort: 443   # Port for HTTPS
        imagePullPolicy: Always
