EKS-resources/nginx-prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prometheus-exporter
  namespace: monitoring  # Use the appropriate namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-prometheus-exporter
  template:
    metadata:
      labels:
        app: nginx-prometheus-exporter
    spec:
      containers:
        - name: nginx-prometheus-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - "-nginx.scrape-uri=http://nginx-service.default.svc.cluster.local:8080/stub_status"  # Reference the NGINX service
          ports:
            - containerPort: 9113
              name: metrics
