EKS-resources/statuspage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statuspage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statuspage
  template:
    metadata:
      labels:
        app: statuspage
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8001"
    spec:
      containers:
      - name: statuspage
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/statuspage-bop:latest
        ports:
        - containerPort: 8001
        imagePullPolicy: Always
