EKS-resources/monkeytype.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monkeytype-deployment
  labels:
    app: monkeytype
spec:
  replicas: 3  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: monkeytype
  template:
    metadata:
      labels:
        app: monkeytype
    spec:
      containers:
      - name: monkeytype
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/games-bop:monkeytype
        ports:
        - containerPort: 5000  # Updated to the correct container port
---
apiVersion: v1
kind: Service
metadata:
  name: monkeytype-service
  labels:
    app: monkeytype
spec:
  selector:
    app: monkeytype
  ports:
    - protocol: TCP
      port: 5000          # The port the service will expose
      targetPort: 5000  # Maps to the container's port 5000
  type: ClusterIP    # Use LoadBalancer for external access, or ClusterIP for internal
---
# ExternalName Service for Nginx
apiVersion: v1
kind: Service
metadata:
  name: monkeytype-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: monkeytype-service.default.svc.cluster.local
