EKS-resources/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx           # Ensure the label matches the selector in the ServiceMonitor
spec:
  type: LoadBalancer  # Change to NodePort if you prefer
  selector:
    app: nginx
  ports:
    - name: http  # Name for the HTTP port
      protocol: TCP
      port: 80     # The service port for HTTP
      targetPort: 80  # The target port on the pod
    - name: https  # Name for the HTTPS port
      protocol: TCP
      port: 443     # The service port for HTTPS
      targetPort: 443  # The target port on the pod
