EKS-resources/statuspage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage-service
  labels:
    app: statuspage           # Ensure the label matches the selector in the ServiceMonitor
spec:
  type: ClusterIP
  selector:
    app: statuspage           # Ensure this matches the app label in the Deployment
  ports:
    - name: http-metrics       # The port name must match the ServiceMonitor's port
      port: 8001               # The port that the service listens on (8001 for your app)
      targetPort: 8001         # Port on the pod to forward traffic to (application port)
