EKS-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bop-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/client-max-body-size: "25m"  # Set max body size
#    nginx.ingress.kubernetes.io/auth-type: "basic"
 #   nginx.ingress.kubernetes.io/auth-secret: "basic-auth"
  #  nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"

spec:
  ingressClassName: nginx  # Ensure this matches the IngressClass name
  rules:
    - host: statuspage.lingiops.com
      http:
        paths:
          - path: /app/nginx/static/
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: kibana.lingiops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-service
                port:
                  number: 5601
    - host: argocd.lingiops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

    - host: tetris.lingiops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetris-service
                port:
                  number: 80

    - host: mankeytype.lingiops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monkeytype-service
                port:
                  number: 5000

    - host: grafana.lingiops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 80
    - host: prometheus.lingiops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090

    - host: final-project.lingiops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  number: 80
  tls:
    - hosts:
        - statuspage.lingiops.com
        - final-project.lingiops.com
        - prometheus.lingiops.com
        - grafana.lingiops.com
        - kibana.lingiops.com
        - argocd.lingiops.com
        - tetris.lingiops.com
        - mankeytype.lingiops.com

      secretName: tls-2048-bilgicloud
